# crimp

./: ai-generated description.txt  compile time code execution thoughts.txt  readme.md  specification old.md  specification.md  tickets.txt  unsorted thoughts.txt
crimp_gc/: AGENTS.md  CLAUDE.md  CMakeLists.txt  more unsorted thoughts.txt  tickets.txt  unsorted thoughts.txt
crimp_gc/include/: crimpGc.h  crimpGc_internals.h  crimpGc_testing.h  crimp_gc.h
crimp_gc/src/: CMakeLists.txt  appThreads.c  appThreads.h  crimpGc.c  crimp_gc.c  crimp_gc.h  gcThread.c  gcThread.h  grayList.c  grayList.h  internalTypes.h  internal_types.h  logging.c  logging.h  mark.c  mark.h  shadowStack.c  shadowStack.h  stackAllocator.c  stackAllocator.h
crimp_gc/test/: CMakeLists.txt  test.c  test.h  test.py
crimp_gc/test/shadowStack/: shadowStack.c  tests.c
crimp_gc/testapp/: CMakeLists.txt
